--- a/package.json
+++ b/package.json
@@ -1,20 +1,63 @@
 {
-  "name": "proxy",
+  "name": "catalog",
   "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+  "description": "related items module for Etsi",
+  "author": "Grant Diamond",
+  "main": "index.js",
+  "jest": {
+    "testURL": "http://localhost"
   },
-  "author": "",
-  "license": "ISC",
+  "engines": {
+    "node": ">=6.13.0"
+  },
+  "scripts": {
+    "start": "pm2 restart server/index.js",
+    "react-dev": "webpack -d --watch",
+    "server-dev": "nodemon server/index.js",
+    "build-dev": "webpack -d --mode development",
+    "clean": "rm dist/bundle.js",
+    "seed": "mysql -u root < db/schema.sql",
+    "test": "jest",
+    "end": "pm2 stop all"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-jest": "^23.6.0",
+    "babel-loader": "^6.4.1",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "css-loader": "^1.0.1",
+    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor.git",
+    "jest": "^22.4.4",
+    "prettier-eslint": "^8.8.2",
+    "puppeteer": "^1.9.0",
+    "webpack": "^2.7.0",
+    "webpack-cli": "^3.1.2"
+  },
   "dependencies": {
     "axios": "^0.18.0",
-    "body-parser": "^1.18.3",
-    "express": "^4.16.4",
+    "bluebird": "^3.5.2",
+    "express": "^4.15.0",
+    "knex": "^0.15.2",
     "morgan": "^1.9.1",
-    "path": "^0.12.7",
-    "request": "^2.88.0"
-  }
+    "mysql": "^2.15.0",
+    "pm2": "^3.2.2",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Etsi-NYC/catalog.git"
+  },
+  "keywords": [
+    "catalog",
+    "etsy",
+    "etsi"
+  ],
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Etsi-NYC/catalog/issues"
+  },
+  "homepage": "https://github.com/Etsi-NYC/catalog#readme"
 }
